test: testing PDF's that return no abstract

--- a/abstract_api_test.ipynb
+++ b/abstract_api_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"+\".pdf\"\n",
+    "pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
     "r = requests.get(pdfurl, stream=True)\n",
     "f = io.BytesIO(r.content)\n",
     "reader = PdfFileReader(f)\n",
@@ -59,9 +59,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arXiv:1811.04422v1  [cs.LG]  11 Nov 2018AnOptimalControlViewofAdversarialMachineLearningXiaojinZhuDepartmentofComputerSciences,UniversityofWisconsin-MadisonAbstractIdescribeanoptimalcontrolviewofadversarialmachinelearning,wherethedynamicalsystemisthemachinelearner,theinputareadversarialactions,andthecontrolcostsaredenedbytheadversary'sgoalstodoharmandbehardtodetect.Thisviewencompassesmanytypesofadversarialmachinelearning,includingtest-itemattacks,training-datapoisoning,andadversarialrewardshaping.Theviewencouragesadversarialmachinelearningresearchertoutilizeadvancesincontroltheoryandreinforcementlearning.1AdversarialMachineLearningisnotMachineLearning Machinelearninghasitsmathematicalfoundationinconcentrationinequalities.Thisisaconsequenceoftheindependentandidentically-distributed(i.i.d.)dataassumption.Incontrast,Isuggestthatadversarialmachinelearningmayadoptoptimalcontrolasitsmathematicalfoundation[3,25].Therearetelltalesigns:adversarialattackstendtobesubtleandhavepeculiarnon-i.i.d.structures{ascontrolinputmightbe.2OptimalControl Iwillfocusondeterministicdiscrete-timeoptimalcontrolbecauseitmatchesmanyexistingadversarialattacks.Extensionstostochasticandcontinuouscontrolarerelevanttoadversarialmachinelearning,too.Thesystemtobecontrollediscalledtheplant,whichisdenedbythesystemdynamics:xt+1=f(xt;ut)(1)wherext2Xtisthestateofthesystem,ut2Utisthecontrolinput,andUtisthecontrolconstraintset.Thefunctionfdenestheevolutionofstateunderexternalcontrol.Thetimeindextrangesfrom0toT 1,andthetimehorizonTcanbeniteorinnite.Thequalityofcontrolisspecedbytherunningcost:gt(xt;ut)(2)whichdenesthestep-by-stepcontrolcost,andtheterminalcostfornitehorizon:gT(xT)(3)whichdenesthequalityofthenalstate.Theoptimalcontrolproblemistondcontrolinputsu0:::uT 1inordertominimizetheobjective:minu0:::uT 1gT(xT)+T 1Xt=0gt(xt;ut)(4)s.t.xt+1=f(xt;ut);ut2Ut;8tx0given1Moregenerally,thecontrolleraimstondcontrolpolicies˚t(xt)=ut,namelyfunctionsthatmapobservedstatestoinputs.Inoptimalcontrolthedynamicsfisknowntothecontroller.Therearetwostylesofsolutions:dynamicprogrammingandPontryaginminimumprinciple[2,10,17].Whenfisnotfullyknown,theproblembecomeseitherrobustcontrolwherecontroliscarriedoutinaminimaxfashiontoaccommodatetheworstcasedynamics[28],orreinforcementlearningwherethecontrollerprobesthedynamics[23].3AdversarialMachineLearningasControl Nowletustranslateadversarialmachinelearningintoacontrolformulation.Adversarialmachinelearningstudiesvulnerabilitythroughoutthelearningpipeline[4,13,20,26].Asexamples,Ipresenttraining-datapoisoning,test-timeattacks,andadversarialrewardshapingbelow.Inallcases,theadversaryattemptstocontrolthemachinelearningsystem,andthecontrolcostsreecttheadversary'sdesiretodoharmandbehardtodetect.Unfortunately,thenotationsfromthecontrolcommunityandthemachinelearningcommunityclash.Forexample,xdenotesthestateincontrolbutthefeaturevectorinmachinelearning.Iwillusethemachinelearningconventionbelow\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-c6924c663d8f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     90\u001b[0m     \u001b[0mcnt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mdummy2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcnt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"abstract\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m             \u001b[0mcnt\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "text = text.split(\"\\n\\n\")\n",
     "\n",
@@ -151,6 +170,7 @@
     "dummy1 = abstract_string.split(\". \")\n",
     "dummy2 = abstract_string.split()\n",
     "if \"abstract\" in dummy1[0].lower():\n",
+    "    print(dummy1[0])\n",
     "    cnt = 0\n",
     "    while True:\n",
     "        if dummy2[cnt].lower().strip() != \"abstract\":\n",
@@ -174,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,22 +203,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'The Dynamic Scalability of resources, a problem in Infrastructure as a Service (IaaS) has been the hotspot for research and industry communities. The heterogeneous and dynamic nature of the Cloud workloads depends on the Quality of Service (QoS) allocation of appropriate workloads to appropriate resources. A workload is an abstraction of work that instance or set of instances that are going to perform. Running a web service or being a Hadoop data node is valid workloads. The efficient management of dynamic nature resources can be done with the help of workloads. Until workload is considered a fundamental capability, the Cloud resources cannot be utilized in an efficient manner. In this paper, different workloads have been identified and categorized along with their characteristics and constraints. The metrics based on Quality of Service (QoS) requirements have been identified for each workload and have been analyzed for creating better application design. Keywords Cloud Computing; Infrastructure as a Service; Quality Attributes; Cloud Metrics I.'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-3d3db24ee3f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mabstractextracter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"http://arxiv.org/pdf/1811.04422v1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/OneDrive/Project Moonstone/Wisdom/Development/wisdomapi/wisdomapi/abstractapi.py\u001b[0m in \u001b[0;36mabstractextracter\u001b[0;34m(pdfurl)\u001b[0m\n\u001b[1;32m    113\u001b[0m         \u001b[0mcnt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 115\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mdummy2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcnt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"abstract\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    116\u001b[0m                 \u001b[0mcnt\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
-    "abstractextracter(\"http://arxiv.org/pdf/1411.6753v1\")"
+    "abstractextracter(\"http://arxiv.org/pdf/1811.04422v1\")"
    ]
   },
   {
@@ -225,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
