fix: using alternative 'pytesseract' method

--- a/AbstractAPI.ipynb
+++ b/AbstractAPI.ipynb
@@ -13,6 +13,8 @@
     "from pathlib import Path\n",
     "import requests\n",
     "import os\n",
+    "import pytesseract\n",
+    "from pdf2image import convert_from_path\n",
     "\n",
     "# download pdf from url\n",
     "\n",
@@ -23,13 +25,29 @@
     "response = requests.get(url)\n",
     "pdf.write_bytes(response.content)\n",
     "\n",
-    "try:\n",
-    "    text = textract.process(pdf)\n",
-    "except:\n",
+    "#try:\n",
+    "#    text = textract.process(pdf)\n",
+    "#except:\n",
     "    # this method takes much longer... either keep this here or replace with error message for user\n",
-    "    text = textract.process(pdf, method=\"tesseract\", language=\"eng\")\n",
+    "#    text = textract.process(pdf, method=\"tesseract\", language=\"eng\")\n",
     "# decode text string from pdf\n",
-    "text = text.decode('utf-8')\n",
+    "#text = text.decode('utf-8')\n",
+    "\n",
+    "pages = convert_from_path(pdf)\n",
+    "text = \"\"\n",
+    "# Iterate through all the pages stored above \n",
+    "for page in pages: \n",
+    "    page.save(\"temp.jpg\", 'JPEG') \n",
+    "    filename = \"temp.jpg\" \n",
+    "    # Recognize the text as string in image using pytesserct \n",
+    "    out = pytesseract.image_to_string(\"temp.jpg\")\n",
+    "    text += out\n",
+    "    os.remove(\"temp.jpg\")\n",
+    "    # stop when abstract has been found\n",
+    "    if \"abstract\" in out.lower():\n",
+    "        break\n",
+    "\n",
+    "\n",
     "# split at double breaks\n",
     "text = text.split(\"\\n\\n\")\n",
     "# collect abstract text\n",
