fix: added new solution without Poppler dependency

--- a/AbstractAPI.ipynb
+++ b/AbstractAPI.ipynb
@@ -14,7 +14,8 @@
     "import requests\n",
     "import os\n",
     "import pytesseract\n",
-    "from pdf2image import convert_from_path\n",
+    "#from pdf2image import convert_from_path\n",
+    "from wand.image import Image\n",
     "\n",
     "# download pdf from url\n",
     "\n",
@@ -33,20 +34,31 @@
     "# decode text string from pdf\n",
     "#text = text.decode('utf-8')\n",
     "\n",
-    "pages = convert_from_path(pdf)\n",
-    "text = \"\"\n",
+    "#pages = convert_from_path(pdf)\n",
+    "#text = \"\"\n",
     "# Iterate through all the pages stored above \n",
-    "for page in pages: \n",
-    "    page.save(\"temp.jpg\", 'JPEG') \n",
-    "    filename = \"temp.jpg\" \n",
+    "#for page in pages: \n",
+    "#    page.save(\"temp.jpg\", 'JPEG') \n",
+    "#    filename = \"temp.jpg\" \n",
     "    # Recognize the text as string in image using pytesserct \n",
-    "    out = pytesseract.image_to_string(\"temp.jpg\")\n",
-    "    text += out\n",
-    "    os.remove(\"temp.jpg\")\n",
-    "    # stop when abstract has been found\n",
-    "    if \"abstract\" in out.lower():\n",
-    "        break\n",
+    "#    out = pytesseract.image_to_string(\"temp.jpg\")\n",
+    "#    text += out\n",
+    "#    os.remove(\"temp.jpg\")\n",
+    "#    # stop when abstract has been found\n",
+    "#    if \"abstract\" in out.lower():\n",
+    "#        break\n",
     "\n",
+    "text = \"\"\n",
+    "\n",
+    "with(Image(filename=pdf, resolution=500)) as source: \n",
+    "    for i, image in enumerate(source.sequence):\n",
+    "        Image(image).save(filename=\"temp.jpg\")\n",
+    "        out = pytesseract.image_to_string(\"temp.jpg\")\n",
+    "        text += out\n",
+    "        os.remove(\"temp.jpg\")\n",
+    "        # stop when abstract has been found\n",
+    "        if \"abstract\" in out.lower():\n",
+    "            break\n",
     "\n",
     "# split at double breaks\n",
     "text = text.split(\"\\n\\n\")\n",
@@ -184,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
